; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_me.c_me_set_running.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_me.c_me_set_running.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.me_softc = type { i32 }
%struct.TYPE_2__ = type { i32 }

@IFF_DRV_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.me_softc*)* @me_set_running to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @me_set_running(%struct.me_softc* %0) #0 {
  %2 = alloca %struct.me_softc*, align 8
  store %struct.me_softc* %0, %struct.me_softc** %2, align 8
  %3 = load %struct.me_softc*, %struct.me_softc** %2, align 8
  %4 = getelementptr inbounds %struct.me_softc, %struct.me_softc* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @in_localip(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %10 = load %struct.me_softc*, %struct.me_softc** %2, align 8
  %11 = call %struct.TYPE_2__* @ME2IFP(%struct.me_softc* %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %9
  store i32 %14, i32* %12, align 4
  br label %23

15:                                               ; preds = %1
  %16 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %17 = xor i32 %16, -1
  %18 = load %struct.me_softc*, %struct.me_softc** %2, align 8
  %19 = call %struct.TYPE_2__* @ME2IFP(%struct.me_softc* %18)
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, %17
  store i32 %22, i32* %20, align 4
  br label %23

23:                                               ; preds = %15, %8
  ret void
}

declare dso_local i64 @in_localip(i32) #1

declare dso_local %struct.TYPE_2__* @ME2IFP(%struct.me_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
